<resources>
    <string name="app_name">Android Project</string>
    <string name="action_main_string">Main page</string>
    <string name="action_add_brand_string">Add brand</string>
    <string name="action_add_model_string">Add model</string>
    <!-- Strings used for fragments for navigation -->
    <string name="vehicle_brands_fragment_label">Select a brand</string>
    <string name="vehicle_models_fragment_label">Select a model</string>
    <string name="brands_search_hint">Enter a brand name</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="brand_image">brand image</string>
    <string name="background_image_description">background-image</string>
    <string name="nav_drawer_header_title">Vehicle info app</string>
    <string name="open">Open nav drawer</string>
    <string name="close">Close nav drawer</string>
    <string name="add_brand_name_hint">Brand name</string>
    <string name="add_brand_title">Add brand</string>
    <string name="vehicles_add_brand_button_text">Add brand</string>
    <string name="add_brand_select_image_button">Select image</string>
    <string name="add_brand_selected_image_preview">selected image preview</string>
    <string name="add_brand_success">Vehicle successfully added</string>
    <string name="add_brand_image_fail">Please add an image</string>
    <string name="add_brand_name_fail">Please input a brand name</string>
    <string name="back_button_text">Back</string>
    <string name="add_model_title">Add model</string>
    <string name="add_model_button_text">Add model</string>
    <string name="add_model_name_hint">Model name</string>
    <string name="add_model_nr_of_seats_hint">Nr. of seats</string>
    <string name="add_model_start_year_hint">Start year</string>
    <string name="add_model_description_hint">Add descripiton</string>
    <string name="add_model_take_photo_button">Take photo</string>
    <string name="add_model_invalid_brand_fail">The given brand does not exist!</string>
    <string name="add_model_name_fail">Please input a model name</string>
    <string name="add_model_success">Model successfully added!</string>
    <string name="add_model_year_fail">Please input a year</string>
    <string name="add_model_seats_fail">Please input the number of seats</string>
    <string name="add_model_body_type_hint">Body type</string>
    <string name="add_model_body_type_fail">Please add a body type</string>
    <string name="camera_permission_required_message">Camera permission required</string>
    <string name="models_string">models</string>
    <string name="view_brands_title">View brands</string>
    <string name="add_brand_actionbar_title">Manage brands</string>
    <string name="add_model_actionbar_title">Manage models</string>
    <string name="brands_actionbar_title">View brands</string>
    <string name="model_details_actionbar_title">Model details</string>
    <string name="model_image">Model image</string>
    <string name="body_type_string">Body type</string>
    <string name="start_year_string">Start year</string>
    <string name="seat_number_string">Seat number</string>
    <string name="description_string">Description</string>
    <string name="share_string">Share</string>
</resources>